--- a/package.json
+++ b/package.json
@@ -1,17 +1,30 @@
 {
   "name": "@skr571999/create-react-component",
-  "version": "1.0.1",
-  "description": "",
+  "version": "1.0.2",
+  "description": "Simple package for creating `React` component.",
   "main": "index.js",
   "scripts": {},
   "bin": {
     "create-react-component": "index.js"
   },
-  "keywords": [],
+  "keywords": [
+    "React",
+    "cli",
+    "create-react-component",
+    "react-component"
+  ],
   "author": "Sachin Kumar Rajput <skr571999@gmail.com>",
   "license": "ISC",
   "dependencies": {
     "yargs": "^16.2.0"
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/skr571999/create-react-component.git"
+  },
+  "bugs": {
+    "url": "https://github.com/skr571999/create-react-component/issues"
+  },
+  "homepage": "https://github.com/skr571999/create-react-component#readme"
 }
