--- a/packages/crc/package.json
+++ b/packages/crc/package.json
@@ -2,7 +2,17 @@
   "name": "@skr571999/crc",
   "version": "0.1.0",
   "description": "A package for creating `React` component for `TS` and `JS`.",
-  "main": "index.js",
+  "author": "Sachin Kumar Rajput <skr571999@gmail.com>",
+  "homepage": "",
+  "license": "ISC",
+  "main": "lib/crc.js",
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "lib"
+  ],
   "scripts": {},
   "bin": {
     "crc": "index.js"
@@ -14,10 +24,8 @@
     "react-component",
     "crc"
   ],
-  "license": "ISC",
   "dependencies": {
     "yargs": "^16.2.0"
   },
-  "devDependencies": {},
-  "author": "Sachin Kumar Rajput <skr571999@gmail.com>"
+  "devDependencies": {}
 }
