added publish config

--- a/packages/crc/package.json
+++ b/packages/crc/package.json
@@ -24,6 +24,9 @@
     "react-component",
     "crc"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "yargs": "^16.2.0"
   },
