--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node index",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/skrmain/npm-packages/issues"
   },
-  "homepage": "https://github.com/skrmain/npm-packages#readme"
+  "homepage": "https://github.com/skrmain/npm-packages#readme",
+  "publishConfig": {
+    "@skrmain:registry": "https://npm.pkg.github.com"
+  }
 }
