--- a/archive/try/package.json
+++ b/archive/try/package.json
@@ -1,10 +1,10 @@
 {
   "name": "try",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index"
   },
   "keywords": [],
   "author": "",
