--- a/packages/express-mongoose-utils/package.json
+++ b/packages/express-mongoose-utils/package.json
@@ -21,5 +21,13 @@
   },
   "bugs": {
     "url": "https://github.com/skrmain/npm-packages/issues"
+  },
+  "dependencies": {
+    "@skrmain/mongoose-utils": "^0.0.5",
+    "express": "^4.18.2"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.17",
+    "typescript": "^5.2.2"
   }
 }
