[express-mongoose-utils] fix name

--- a/packages/express-mongoose-utils/package.json
+++ b/packages/express-mongoose-utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-mongoose-utils",
+  "name": "@skrmain/express-mongoose-utils",
   "version": "0.0.0",
   "description": "> TODO: description",
   "author": "Sachin Kumar Rajput <skr571999@gmail.com>",
